[package]
name = "encointer-client-notee"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2021"
#keep with node version. major, minor and patch
version = "1.16.2"

[dependencies]
# todo migrate to clap >=3 https://github.com/encointer/encointer-node/issues/107
array-bytes = "6.2.2"
chrono = "0.4.35"
clap = "2.33"
clap-nested = "0.4.0"
env_logger = { workspace = true }
futures = { workspace = true }
geojson = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

# local deps
encointer-api-client-extension = { path = "./encointer-api-client-extension" }
encointer-node-notee-runtime = { path = "../runtime" }

# encointer deps
encointer-ceremonies-assignment = { workspace = true, features = ["std"] }
encointer-primitives = { workspace = true, features = ["std"] }
pallet-encointer-balances = { workspace = true, features = ["std"] }
pallet-encointer-ceremonies = { workspace = true, features = ["std"] }
pallet-encointer-communities = { workspace = true, features = ["std"] }
pallet-encointer-scheduler = { workspace = true, features = ["std"] }

# scs deps
ac-keystore = { workspace = true }
substrate-api-client = { workspace = true, features = ["std"] }

# substrate deps
frame-support = { workspace = true, features = ["std"] }
frame-system = { workspace = true, features = ["std"] }
itertools = "0.10.5"
pallet-transaction-payment = { workspace = true, features = ["std"] }
sp-application-crypto = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-keystore = { workspace = true, features = ["std"] }
sp-rpc = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
