[package]
authors = ["encointer.org <alain@encointer.org>"]
build = "build.rs"
description = "Encointer Node noTEE"
edition = "2021"
homepage = "https://encointer.org"
license = "GPL-3.0"
name = "encointer-node-notee"
repository = "https://github.com/encointer/encointer-node"
# Note the following for the versioning:
#   * Align major and minor version with polkadot-sdk major.minor.
#   * Bump patch version for new releases, and make it the release tag.
#   * The client should follow this version.
version = "1.14.3"

[[bin]]
name = "encointer-node-notee"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true, features = ["std"] }

frame-metadata-hash-extension = { workspace = true, features = ["std"] }
frame-system = { workspace = true, features = ["std"] }
pallet-asset-tx-payment = { workspace = true, features = ["std"] }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-offchain = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true, features = ["std"] }

# These dependencies are used for the node's RPCs
jsonrpsee = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true, features = ["std"] }
frame-benchmarking-cli = { workspace = true }

# encointer dependencies
encointer-node-notee-runtime = { path = "../runtime" }

encointer-balances-tx-payment-rpc = { workspace = true }
encointer-balances-tx-payment-rpc-runtime-api = { workspace = true, features = ["std"] }
pallet-encointer-bazaar-rpc = { workspace = true }
pallet-encointer-bazaar-rpc-runtime-api = { workspace = true, features = ["std"] }
pallet-encointer-ceremonies-rpc = { workspace = true }
pallet-encointer-ceremonies-rpc-runtime-api = { workspace = true, features = ["std"] }
pallet-encointer-communities-rpc = { workspace = true }
pallet-encointer-communities-rpc-runtime-api = { workspace = true, features = ["std"] }
pallet-encointer-treasuries-rpc = { workspace = true }
pallet-encointer-treasuries-rpc-runtime-api = { workspace = true, features = ["std"] }

# CLI-specific dependencies
frame-try-runtime = { workspace = true, optional = true }

[features]
default = []
runtime-benchmarks = [
    "encointer-node-notee-runtime/runtime-benchmarks",
    "frame-benchmarking-cli/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-asset-tx-payment/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future. Todo: implement try runtime for encointer-pallets
try-runtime = [
    "encointer-node-notee-runtime/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime/try-runtime",
    "pallet-asset-tx-payment/try-runtime",
    "sp-runtime/try-runtime",
]
